# listonic-plugin

./: .gitignore  README.md  README_PL.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
skills/listonic-edit/: SKILL.md
skills/listonic-history/: SKILL.md
skills/listonic-lists/: SKILL.md
skills/listonic-setup/: SKILL.md
src/listonic/: cli.py  client.py  config.py  const.py  history.py
tests/: test_cli.py  test_client_auth.py  test_client_lists.py  test_client_write.py  test_config.py  test_history.py
